--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     verter sobre la masa precocida. Cocinar en horno moderado durante 15 minutos.</li>
                 <li>Colocar el azúcar en una cacerolita y cubrir con apenas con agua. Cocinar hasta obtener la textura de un
                     merengue italiano</li>
-                <li>>Unos minutos antes del punto del almíbar, comenzar a batir las claras. Cuando empiecen a formar picos,
+                <li>Unos minutos antes del punto del almíbar, comenzar a batir las claras. Cuando empiecen a formar picos,
                     añadir gota a gota el almíbar caliente sin dejar de batir hasta que se enfríe.</li>
                 <li>Decorar con el merengue y gratinar.</li>
             </ol>
